# tree-sitter-jakt

./: .gitignore  .nvim-commands.lua  .python-version  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.txt  binding.gyp  grammar.js  output  package.json  pyproject.toml  pyrightconfig.json
assets/: highlightoutput.html  highlightoutput.md
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm  injections.scm
script/: README.md  roadmapgen.py  state.toml  test-roadmap-generator.py
script/test/: test_dir_walk.py  test_samples_dir_walk.py  test_testmap.py
script/test/data/: test_testmap_check_fully_implemented_true.txt
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: controlflow.txt  enum.txt  expressions.txt  functions.txt  literal.txt  structs_and_classes.txt  types.txt
test/corpus/apps/: cat-std.txt  cat.txt  crc32.txt  json.txt  read_all.txt
test/corpus/arrays/: array1.txt  array2.txt  array_bad.txt  array_bad2.txt  array_insert.txt  array_iterator.txt  array_param.txt  array_pop.txt  array_push.txt  array_shorthand.txt  contains.txt  empty_infer_call.txt  empty_infer_call_bad.txt  empty_literal_without_hint.txt  inference_empty.txt  lvalue.txt  lvalue_bad.txt  multidimension_array.txt  pop_class_instance.txt  prefill.txt  push_values.txt  reference_semantics.txt  shorthand_optional.txt  size.txt  slice.txt  slice_of_slice.txt  throws.txt
test/corpus/attributes/: deprecated.txt  external_name.txt  stores_arguments.txt
test/corpus/basics/: binary_literals.txt  bubble_sort.txt  byte_literals.txt  comments.txt  error.txt  escape_sequence.txt  float_literals.txt  format.txt  hello.txt  hello_number.txt  hex_literals.txt  is.txt  is_none.txt  numeric_literal_suffixes.txt  octal_literals.txt  opening_curly_brace_on_newline.txt  reserved_variable.txt
test/corpus/boolean/: logical_and.txt  logical_not.txt  logical_or.txt
test/corpus/classes/: call_private_from_public.txt  class.txt  (+10 more)
(+297 files in other folders)
