[tool.poetry]
name = "tree-sitter-jakt"
version = "0.1.0"
description = ""
authors = ["Jesus Alvarez <jeezusjr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"
rich = "^12.4.4"
typer = "^0.4.1"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]
mypy = "^0.960"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["script"]
log_cli = true
log_level = "NOTSET"
